# pet-infra

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  params.yaml  pyproject.toml
.github/workflows/: ci.yml  cross-repo-smoke-install.yml  install-order-smoke.yml  integration-smoke.yml  no-wandb-residue.yml  plugin-discovery.yml  recipe-dry-run.yml  release-smoke.yml  schema-validation.yml
ci/workflows/: release_gate.yml  standard_ci.yml
configs/smoke/: mps_eval.yaml  mps_train.yaml  small_calibration.yaml  small_deploy.yaml  small_eval.yaml  small_eval_quant.yaml  small_quantize.yaml  small_train.yaml  tiny_quantize.yaml  tiny_train.yaml
docker/clearml/: .env.example  README.md  docker-compose.yml
docker/dev/: Dockerfile
docker/labelstudio/: docker-compose.yml
docker/wandb/: docker-compose.yml
docs/: DEVELOPMENT_GUIDE.md  MONOREPO_REFERENCE.md  PHASE_DOD_TEMPLATE.md  architecture.md  compatibility_matrix.yaml  gpu-session-readiness-2026-04.md  onboarding.md  runbook.md
docs/architecture/: OVERVIEW.md  Train-Pet-Pipeline-Technical-Overview.pptx  generate_technical_overview_ppt.py
docs/ecosystem-validation/: 2026-04-25-design.md  2026-04-25-plan.md  2026-04-25-report.md  2026-04-26-handoff.md  README.md
docs/ecosystem-validation/2026-04-25-artifacts/: bootstrap_rental.sh  data-subset-manifest.json  dpo_v1.jsonl  generate_labels.py  kickoff.md  select_data_subset.py  sft_v1.jsonl
docs/ecosystem-validation/2026-04-27-artifacts/: README.md
docs/retrospectives/: 2026-04-21-phase-3a.md  2026-04-21-phase-3b.md  2026-04-22-phase-4-retrospective.md  2026-04-23-ecosystem-optimization.md
recipes/: pet_data_ingest_smoke.yaml  release.yaml  replay_test.yaml  smoke_foundation.yaml  smoke_mps.yaml  smoke_small.yaml  smoke_tiny.yaml
recipes/_base/: smoke_base.yaml
recipes/converter/: audio_rknn_fp16.yaml  noop_converter.yaml  vision_rknn_fp16.yaml  vlm_rkllm_w4a16.yaml
recipes/dataset/: audio_calibration_subset.yaml  vision_calibration_subset.yaml  vlm_calibration_subset.yaml
recipes/evaluator/: quantized_vlm_evaluator.yaml  vlm_evaluator.yaml
recipes/ota/: local_backend.yaml
recipes/trainer/: llamafactory_dpo.yaml  llamafactory_sft.yaml  tiny_test.yaml
scripts/: check_deps.sh  init_labelstudio.sh  lint.sh  setup_dev.sh  sync_to_repo.sh
shared/: .env.example  Makefile.include  pyproject-base.toml  requirements-dev.txt
src/pet_infra/: __init__.py  _register.py  api_client.py  cli.py  compose.py  device.py  launcher.py  logging.py  registry.py  replay.py  retry.py  store.py  sweep_preflight.py
tests/: conftest.py  test_api_client.py  test_base_abcs.py  test_cli_list_plugins.py  test_cli_validate.py  test_compat_matrix.py  test_compose_backward_compat.py  test_compose_defaults_list.py  test_compose_stages_dict_normalization.py  test_current_git_shas.py  test_device.py  test_hydra_plugins.py  test_launcher_multirun.py  test_logging.py  test_noop_evaluator.py  test_orchestrator_hooks.py  test_phase3b_smoke_recipes.py  test_plugins_discover.py  test_recipe_card_id.py  test_recipe_compose.py  test_recipe_dag.py  test_recipe_preflight.py  test_registry.py  test_retry.py  test_smoke_recipe.py  test_storage_local.py  test_store.py  test_validate_hardware_cli.py  test_version.py
tests/cli/: conftest.py  test_replay.py
tests/experiment_logger/: test_clearml_logger.py  test_factory.py  test_null_logger.py
tests/integration/: test_phase2_smoke.py
tests/launcher/: test_preflight.py  test_resolved_config.py  test_variations.py
tests/orchestrator/: test_base_stage_runner.py  test_cache.py  test_dag.py  test_hash.py  test_multirun.py  test_runner_gate_failed.py  test_runner_log_metrics.py  test_runner_resume.py  test_runner_yaml_load.py
tests/storage/: conftest.py  test_http.py  test_local_file_scheme.py  test_s3.py
(+101 files in other folders)
