[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet-infra"
version = "1.0.0"
description = "Shared infrastructure for Train-Pet-Pipeline"
requires-python = ">=3.10"
dependencies = [
    "tenacity>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.1"]
api = ["httpx>=0.27,<1.0"]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
sync = [
    "tomli>=2.0; python_version < '3.12'",
    "tomli_w>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
